# OpenWatchParty

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  AUDIT_ISSUES.md  CLAUDE.md  Makefile  PLAN.md  README.md  audit.md  docker-compose.yml  performance-audit.md
.github/workflows/: ci.yml  docker-publish.yml  docs.yml
clients/: README.md
clients/jellyfin-web/: app.js  chat.js  manifest.json  playback.js  plugin.js  state.js  ui.js  utils.js  ws.js
clients/mpv/: README.md  opensyncparty.py
clients/vlc/: README.md
clients/web/: README.md  overlay.js
clients/web-overlay/: README.md  demo.html  overlay.js
clients/web-plugin/: README.md  app.js  manifest.json  opensyncparty.js  osp-app.js  osp-playback.js  osp-state.js  osp-ui.js  osp-utils.js  osp-ws.js  owp-app.js  owp-playback.js  owp-state.js  owp-ui.js  owp-ws.js  playback.js  plugin.js  state.js  ui.js  utils.js  ws.js
docs/: Gemfile  README.md  _config.yml  architecture.md  development.md  index.md  protocol.md  roadmap.md  user-guide.md
docs/development/: ci.md  contributing.md  index.md  release.md  setup.md  testing.md
docs/jellyfin-plugin-repo/: manifest.json
docs/operations/: configuration.md  deployment.md  installation.md  monitoring.md  (+2 more)
infra/: README.md
plugins/: README.md
scripts/: README.md  build-jellyfin-plugin.sh  sync-jellyfin-refs.sh
server/: Cargo.toml
session-server/: README.md  app.py
session-server-rust/: Cargo.toml  Dockerfile
session-server-rust/src/: auth.rs  main.rs  messaging.rs  room.rs  types.rs  utils.rs  ws.rs
tests/: README.md  protocol_harness.py
(+41 files in other folders)
