[package]
name = "session-server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = { version = "0.3", default-features = false }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.10"
log = "0.4"